added api call, state, props

--- a/quizzer/src/index.css
+++ b/quizzer/src/index.css
@@ -5,6 +5,7 @@
   width: 23%;
   text-align: center;
   margin: 1%;
+  cursor: pointer;
 }
 
 .front,
@@ -33,4 +34,9 @@
 
 .card:hover .back {
   transform: rotateY(0);
+}
+
+body {
+  background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
+  /*background-image: linear-gradient(to top, #bdc2e8 0%, #bdc2e8 1%, #e6dee9 100%);*/
 }
