--- a/quizzer/src/index.css
+++ b/quizzer/src/index.css
@@ -106,7 +106,7 @@ h3 {
   background-color: #4F5D75;
   transform: rotateY(-180deg);
   text-align: center;
-  color: #BFC0C0;
+  color: #C5D6D6;
 }
 
 .back h2 {
@@ -123,7 +123,7 @@ h3 {
 }
 
 body {
-  background-color: #BFC0C0;
+  background-color: #C5D6D6;
   font-family: Verdana, sans-serif;
 }
 
