--- a/quizzer/src/index.css
+++ b/quizzer/src/index.css
@@ -131,3 +131,28 @@ ol {
   list-style-type: lower-alpha;
   text-align: left;
 }
+
+@media (max-width: 1200px) {
+  .card {
+    padding-bottom: 29%;
+    width: 29%;
+    margin: 2%;
+  }
+}
+
+@media (max-width: 900px) {
+  .card {
+    padding-bottom: 46%;
+    width: 46%;
+    margin: 2%;
+  }
+}
+
+@media (max-width: 500px) {
+  .card {
+    padding-bottom: 80%;
+    width: 80%;
+    margin: 3% 10%;
+  }
+
+}
